# diagno_ml

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Dockerfile.lab-mock  Dockerfile.mlflow  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  releaserc.json
.github/workflows/: cd.yml  ci.yml  version.yml
configs/grafana/dashboards/: diagnoml-overview.json
configs/grafana/provisioning/dashboards/: dashboards.yml
configs/grafana/provisioning/datasources/: datasources.yml
configs/prometheus/: prometheus.yml
issues/: 1  1.md  bug-issue-2026-02-02-16-29.md
repos/FabsHof/diagno_ml/issues/: new
src/: __init__.py
src/api/: __init__.py  main.py
src/data/validators/: __init__.py
src/edc/: __init__.py
src/mocks/: __init__.py  lab_mock.py
src/models/: __init__.py
src/utils/: config.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_config.py
