[project]
name = "diagnoml"
version = "0.1.0"
description = "Clinical Diagnosis Prediction PoC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Core
    "prefect>=3.0",
    "mlflow>=3.0",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=2.0",
    
    # Data
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "faker>=33.0",
    
    # API
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "httpx>=0.28",
    
    # GCP
    "google-cloud-bigquery>=3.27",
    "google-cloud-storage>=2.18",
    
    # Monitoring
    "evidently>=0.5",
    "prometheus-client>=0.21",
    
    # Utilities
    "python-dotenv>=1.0",
    "joblib>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit>=1.8",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow running tests",
]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.bandit]
exclude_dirs = ["tests", "scripts"]
skips = ["B101"]  # assert_used